turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: not found: value i
  while ( colors(i) != couleurActuelle ){
                 ^Turmite:14: error: not found: value i
    i+=1;
    ^Turmite:16: error: type mismatch;
 found   : Int
 required: java.awt.Color
  setCouleurSol(rule(state)(indiceCouleur)(0));
                                          ^